src/objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>States_Country__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;  &amp;  Country_Name__r.Id ,Country_Name__r.Name ) &amp; &quot;-&gt;&quot;  &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>States Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Districts__c</fullName>
        <label>Total Number Of Districts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>State_Code__c</columns>
        <columns>Country_Name__c</columns>
        <columns>Total_Number_Of_Districts__c</columns>
        <columns>States_Country__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>